Mostly done. Though there is a problem with fetch function. It's skipping some data of the dates, likely due to how exclusion and inclusion of dates is done. For example of the date 21-07-25

--- a/scripts/test.ipynb
+++ b/scripts/test.ipynb
@@ -2,50 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3098949b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os, json, requests, datetime as dt\n",
-    "from pathlib import Path\n",
-    "from dotenv import load_dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "44dad4c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_dotenv()\n",
-    "\n",
-    "TOKEN= os.getenv(\"TOGGL_API_KEY\")\n",
-    "TODAY= dt.date.today()\n",
-    "SINCE= TODAY - dt.timedelta(days=7)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "id": "99164d30",
+   "id": "29b819c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# ──────────────────────────────\n",
+    "# CONFIG ‒ edit as you like\n",
+    "# ──────────────────────────────\n",
+    "RAW_DIR      = Path(r\"C:\\Codes\\Personal_Task_Recommender\\data\\raw\")       # where raw_entries_*.json live\n",
+    "OUT_DIR      = Path(r\"C:\\Codes\\Personal_Task_Recommender\\data\\processed\")   # destination for CSVs\n",
+    "JSON_PATTERN = \"raw_entries_*.json\"     # glob pattern to select files\n",
+    "LOCAL_TZ     = \"Asia/Kolkata\"          # GMT+05:30\n",
+    "# ──────────────────────────────"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3215b1fb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-07-16\n",
-      "7 days, 0:00:00\n",
-      "2025-07-09\n"
+      "[WindowsPath('C:/Codes/Personal_Task_Recommender/data/raw/raw_entries_2025-05-13_to_2025-07-09.json'), WindowsPath('C:/Codes/Personal_Task_Recommender/data/raw/raw_entries_2025-07-09_to_2025-07-16.json'), WindowsPath('C:/Codes/Personal_Task_Recommender/data/raw/raw_entries_2025-07-15_to_2025-07-18.json'), WindowsPath('C:/Codes/Personal_Task_Recommender/data/raw/raw_entries_2025-07-18_to_2025-07-21.json')]\n"
      ]
     }
    ],
    "source": [
-    "print(TODAY)\n",
-    "print(dt.timedelta(days=7))\n",
-    "print(SINCE) "
+    "json_files = list(Path(RAW_DIR).iterdir())\n",
+    "print(json_files)"
    ]
   }
  ],
